--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -1,5 +1,20 @@
 /* Common Components Styles */
 
+.ball {
+  z-index: 1;
+  inset: 0px;
+  transform: translateX(-95px);
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -10px 10px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -15px 15px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -40px 20px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px,
+    0px -1px 15px -8px rgba(0, 0, 0, 0.09);
+  border-radius: 100%;
+  transition: transform 800ms cubic-bezier(1, -0.4, 0, 1.4);
+  background-color: rgb(232, 232, 232, 1);
+}
+
 /* Tertiary Buttons (Menu Links in sidebar) */
 .tertiaryBtn {
   font-size: 1.2rem;
@@ -40,18 +55,37 @@
 
 /* Secondary and Primary Buttons in Hero Section */
 
+/* From Uiverse.io by barisdogansutcu */ 
 .btn {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
-  
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ gap: 10px;
+ font-family: inherit;
+ font-size: 13px;
+ font-weight: 500;
+ text-transform: uppercase;
+ letter-spacing: 0.4px;
+ color: #7e97b8;
+ background-color: #e0e8ef;
+ border-style: solid;
+ border-width: 2px 2px 2px 2px;
+ border-color: rgba(255, 255, 255, 0.333);
+ border-radius: 2rem;
+ padding: 16px 24px 16px 28px;
+ transform: translate(0px, 0px) rotate(0deg);
+ transition: 0.2s;
+ box-shadow: -4px -2px 16px 0px #ffffff, 4px 2px 16px 0px rgb(95 157 231 / 48%);
 }
 
 .btn:hover {
-  box-shadow: var(--box-shadow-press);
+ color: #516d91;
+ background-color: #E5EDF5;
+ box-shadow: -2px -1px 8px 0px #ffffff, 2px 1px 8px 0px rgb(95 157 231 / 48%);
+}
+
+.btn:active {
+ box-shadow: none;
 }
 
 .primaryBtn {
@@ -59,12 +93,20 @@
   color: var(--text-color2);
 }
 
+
+.primaryBtn:hover {
+background-color: #dcaf3e;
+}
+
 .secondaryBtn {
   background-color: var(--accent-color2);
   color: var(--text-color2);
 }
 
-
+.secondaryBtn:hover {
+  box-shadow: inset 20px 20px 60px #473895,
+    inset -20px -20px 60px #765df9;
+}
 
 /* Toggle Switch */
 .buttons__switch {
