--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-@import "variables.css";
 @import "commonComponents.css";
 
 /* Base styles */
@@ -65,12 +64,7 @@ h1 {
   overflow: auto;
   overflow-x: hidden;
   background-color: var(--primary-bg);
-  box-shadow:
-    8px 8px 16px #c5c9d1,
-    /* sombra oscura abajo a la derecha */
-    -8px -8px 16px #e0dcdc;
-  /* sombra clara arriba a la izquierda */
-
+  box-shadow: var(--box-shadow-main);
 }
 
 .aside__user-info {
@@ -555,7 +549,7 @@ input:checked+.skills__slider::before {
 .project__content {
   background-color: white;
   margin-top: -12rem;
-  z-index: -2;
+  z-index: 2;
   padding: 5rem;
 }
 
@@ -563,24 +557,15 @@ input:checked+.skills__slider::before {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 5rem;
+  margin: 5rem 0 5rem 0;
 
-}
-
-.features__grid {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
-  margin-top: 5rem;
 }
 
 /* === CONTENEDOR DE FEATURES === */
 .features__showcase {
   display: grid;
   grid-template-columns: 1fr 300px;
-  gap: 2rem;
+  gap: 5rem;
   align-items: start;
 }
 
@@ -611,13 +596,7 @@ input:checked+.skills__slider::before {
   z-index: 1;
 }
 
-/* === RADIO GROUP ESTILIZADO (Uiverse) === */
-.radiogroup {
-  padding: 48px 64px;
-  border-radius: 16px;
-  background: #ecf0f3;
-  box-shadow: 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
-}
+/*RADIO GROUP ESTILIZADO*/
 
 .state {
   position: absolute;
@@ -637,8 +616,8 @@ input:checked+.skills__slider::before {
 .indicator {
   position: relative;
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6;
   overflow: hidden;
 }
@@ -660,19 +639,19 @@ input:checked+.skills__slider::before {
 }
 
 .indicator::after {
-  background-color: #ecf0f3;
-  box-shadow: -4px -2px 4px 0px #fff, 4px 2px 8px 0px #d1d9e6;
+  background-color: var(--icon-circle-bg);
+  box-shadow: var(--box-shadow-up);
   transform: scale3d(1, 1, 1);
   transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
 }
 
 
-.state:checked ~ .label .indicator::after {
+.state:checked~.label .indicator::after {
   transform: scale3d(0.975, 0.975, 1) translate3d(0, 10%, 0);
   opacity: 0;
 }
 
-.state:focus ~ .label .text {
+.state:focus~.label .text {
   transform: translate3d(8px, 0, 0);
   opacity: 1;
 }
@@ -680,7 +659,10 @@ input:checked+.skills__slider::before {
 .label:hover .text {
   opacity: 1;
 }
+
 .text {
+  width: 20rem;
+  padding: 0.8rem;
   margin-left: 16px;
   opacity: 0.6;
   transition: opacity 0.2s linear, transform 0.2s ease-out;
