--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -15,22 +15,68 @@
   background-color: rgb(232, 232, 232, 1);
 }
 
+/* From Uiverse.io by barisdogansutcu */
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  color: #7e97b8;
+  background-color: #e0e8ef;
+  border-style: solid;
+  border-width: 2px 2px 2px 2px;
+  border-color: rgba(255, 255, 255, 0.333);
+  border-radius: 0.5rem;
+  padding: 10px 20px;
+  transform: translate(0px, 0px) rotate(0deg);
+  transition: 0.2s;
+  box-shadow: -4px -2px 16px 0px #ffffff, 4px 2px 16px 0px rgb(95 157 231 / 48%);
+}
+
+.btn:hover {
+  color: #516d91;
+  background-color: #E5EDF5;
+  box-shadow: -2px -1px 8px 0px #ffffff, 2px 1px 8px 0px rgb(95 157 231 / 48%);
+}
+
+.btn:active {
+  box-shadow: none;
+}
+
+.primaryBtn {
+  background-color: var(--accent-color);
+  color: var(--text-color2);
+}
+
+
+.primaryBtn:hover {
+  background-color: #dcaf3e;
+}
+
+.secondaryBtn {
+  background-color: var(--accent-color2);
+  color: var(--text-color2);
+}
+
+.secondaryBtn:hover {
+  box-shadow: inset 20px 20px 60px #473895,
+    inset -20px -20px 60px #765df9;
+}
+
 /* Tertiary Buttons (Menu Links in sidebar) */
 .tertiaryBtn {
-  font-size: 1.2rem;
-  margin-top: 2rem;
-  padding: 10px 20px;
   background-color: var(--primary-bg);
   outline: 0.05rem solid var(--primary-bg);
-  color: var(--text-color);
   border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   box-shadow: var(--box-shadow-inset-box);
 }
 
 .tertiaryBtn:hover {
+  background-color: var(--primary-bg);
   box-shadow: var(--box-shadow-up);
 }
 
@@ -53,60 +99,6 @@
   box-shadow: var(--box-shadow-press);
 }
 
-/* Secondary and Primary Buttons in Hero Section */
-
-/* From Uiverse.io by barisdogansutcu */ 
-.btn {
- display: flex;
- align-items: center;
- justify-content: center;
- gap: 10px;
- font-family: inherit;
- font-size: 13px;
- font-weight: 500;
- text-transform: uppercase;
- letter-spacing: 0.4px;
- color: #7e97b8;
- background-color: #e0e8ef;
- border-style: solid;
- border-width: 2px 2px 2px 2px;
- border-color: rgba(255, 255, 255, 0.333);
- border-radius: 2rem;
- padding: 16px 24px 16px 28px;
- transform: translate(0px, 0px) rotate(0deg);
- transition: 0.2s;
- box-shadow: -4px -2px 16px 0px #ffffff, 4px 2px 16px 0px rgb(95 157 231 / 48%);
-}
-
-.btn:hover {
- color: #516d91;
- background-color: #E5EDF5;
- box-shadow: -2px -1px 8px 0px #ffffff, 2px 1px 8px 0px rgb(95 157 231 / 48%);
-}
-
-.btn:active {
- box-shadow: none;
-}
-
-.primaryBtn {
-  background-color: var(--accent-color);
-  color: var(--text-color2);
-}
-
-
-.primaryBtn:hover {
-background-color: #dcaf3e;
-}
-
-.secondaryBtn {
-  background-color: var(--accent-color2);
-  color: var(--text-color2);
-}
-
-.secondaryBtn:hover {
-  box-shadow: inset 20px 20px 60px #473895,
-    inset -20px -20px 60px #765df9;
-}
 
 /* Toggle Switch */
 .buttons__switch {
