--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -127,7 +127,9 @@ h1 {
   gap: 8rem;
 }
 
-
+.menu__option {
+  margin-top: 1rem;
+}
 
 .aside__buttons {
   margin-top: 3rem;
@@ -151,10 +153,16 @@ h1 {
 /* Hero Section */
 .content__page {
   height: 100%;
+  padding: 2rem;
 }
 
-.content__hero {
+.content__hero,
+.content__skills {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .page__text {
@@ -188,13 +196,15 @@ h1 {
 
 
 /* Skills Section */
-.content__skills {
-  height: 100%;
-}
-
 .content__studies {
   height: 100%;
   overflow-y: hidden;
+}
+
+.content__skills {
+
+  flex-direction: row;
+
 }
 
 .skills__textContent {
@@ -400,7 +410,7 @@ input:checked+.skills__slider::before {
 /* Imagen superior */
 .card__item {
   width: 40rem;
-  height: 50rem;
+  height: 60rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -409,14 +419,15 @@ input:checked+.skills__slider::before {
   background: #f5f5f5;
   position: relative;
   padding: 1.8rem;
-  border: 2px solid #c3c6ce;
+  border: 2px solid #f5f5f5;
   transition: 0.5s ease-out;
   overflow: visible;
+  box-shadow: -4px -2px 16px 0px #ffffff, 4px 2px 16px 0px rgb(95 157 231 / 48%);
 }
 
 .card__img {
   width: 100%;
-  height: 80%;
+  height: 26rem;
   object-fit: cover;
   transition: opacity 0.3s ease;
 }
@@ -468,12 +479,12 @@ input:checked+.skills__slider::before {
 }
 
 .card__item:hover {
-  border-color: #008bf8;
+  border-color: var(--accent-color2);
   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
-.card__item:hover .card__img {
-  filter: blur(10px);
+.card__item:hover .card__img,.card__item:hover .projects__skill {
+  opacity: 0;
   transition: opacity 0.3s ease;
 }
 
@@ -684,17 +695,23 @@ input:checked+.skills__slider::before {
 /* Skills / logos */
 .projects__skill {
   display: flex;
-  flex-wrap: wrap;
-  gap: 0.8rem;
+  justify-content: space-around;
   margin-top: 1rem;
+  font-size: 1rem;
+  width: 26rem;
+  transition: opacity 0.3s ease;
 }
 
 .skill__item {
-  width: 5rem;
-  height: 5rem;
+  width: 7rem;
+  height: 7rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+ 
+.skill__icon{
+  font-size: 1.5rem;
 }
 
 .skill__logo {
@@ -993,47 +1010,4 @@ footer {
 
 .animate-delay-1000 {
   transition-delay: 1s;
-}
-
-/* Responsive styles */
-@media (max-width: 768px) {
-  .layout {
-    position: relative;
-    width: 95%;
-    height: auto;
-    min-height: auto;
-    margin: 5vh auto;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: var(--box-shadow-main);
-  }
-
-  .layout__aside {
-    width: 100%;
-    border-radius: 1rem 1rem 0 0;
-  }
-
-  .layout__content {
-    width: 100%;
-    min-height: 100%;
-  }
-
-  .content__skills {
-    flex-direction: column;
-  }
-
-  .skills__textContent,
-  .skills__container {
-    width: 100%;
-  }
-
-  .studies__item {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .studies__date {
-    min-width: auto;
-  }
 }
