--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -1,21 +1,5 @@
 /* Common Components Styles */
 
-.ball {
-  z-index: 1;
-  inset: 0px;
-  transform: translateX(-95px);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -10px 10px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -15px 15px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -40px 20px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px,
-    0px -1px 15px -8px rgba(0, 0, 0, 0.09);
-  border-radius: 100%;
-  transition: transform 800ms cubic-bezier(1, -0.4, 0, 1.4);
-  background-color: rgb(232, 232, 232, 1);
-}
-
-/* From Uiverse.io by barisdogansutcu */
 .btn {
   display: flex;
   align-items: center;
@@ -26,9 +10,7 @@
   letter-spacing: 0.4px;
   color: #7e97b8;
   background-color: #e0e8ef;
-  border-style: solid;
-  border-width: 2px 2px 2px 2px;
-  border-color: rgba(255, 255, 255, 0.333);
+  border: 2px solid rgba(255, 255, 255, 0.333);
   border-radius: 0.5rem;
   padding: 10px 20px;
   transform: translate(0px, 0px) rotate(0deg);
@@ -47,23 +29,20 @@
 }
 
 .primaryBtn {
-  background-color: var(--accent-color);
-  color: var(--text-color2);
+  background-color: #fffbdb;
+  opacity: 2;
+  box-shadow: -2px -1px 8px 0px #ffffff, 2px 1px 8px 0px rgb(95 157 231 / 48%);
+  border: 2px solid rgba(255, 255, 255, 0.333);
 }
-
 
 .primaryBtn:hover {
-  background-color: #dcaf3e;
-}
-
-.secondaryBtn {
-  background-color: var(--accent-color2);
-  color: var(--text-color2);
+  background-color: #f5f3e5;
+  opacity: 2;
+  box-shadow: var(--box-shadow-up)
 }
 
 .secondaryBtn:hover {
-  box-shadow: inset 20px 20px 60px #473895,
-    inset -20px -20px 60px #765df9;
+  box-shadow: var(--box-shadow-up)
 }
 
 /* Tertiary Buttons (Menu Links in sidebar) */
