--- a/Portafolio Udemi/assets/css/light.css
+++ b/Portafolio Udemi/assets/css/light.css
@@ -18,12 +18,26 @@
    /* Color oscuro del slider */
 
    --linear-gradient: 270deg, var(--highlight-color2), var(--background-gradient-secondary);
+   --radial-gradient: radial-gradient(circle at 30% 30%,
+       #ffffff 0%,
+       #f5f5f5 35%,
+       #e6e6e6 70%,
+       #d0d0d0 100%);
+
    --shadow-light: #c1c6ce;
    --shadow-dark: #9da1a7;
    --white-shadow: #ffffff;
 
    --box-shadow-main: 8px 8px 16px #b8bcc2, -8px -8px 16px #ffffff;
-   --box-shadow-inset: inset 10px 10px 10px var(--shadow-light), inset -10px -10px 10px var(--text-color2);
+   --box-shadow-inset:
+     -4px -4px 8px rgba(255, 255, 255, 0.9),
+     /* luz arriba izquierda */
+     4px 4px 8px rgba(0, 0, 0, 0.18),
+     /* sombra abajo derecha */
+     inset -2px -2px 4px rgba(255, 255, 255, 0.7),
+     /* brillo interno */
+     inset 3px 3px 5px rgba(0, 0, 0, 0.15);
+   /* sombra interna */
    --box-shadow-press: rgb(193, 198, 206) 2px 2px 2px inset, rgb(255, 255, 255) -2px -2px 5px inset, rgb(193, 198, 206) 0.5px 0.5px 5px inset, rgb(255, 255, 255) -0.5px -0.5px 3px inset;
    --box-shadow-up: 2px 2px 5px var(--shadow-light), -2px -2px 5px var(--text-color2), 0.5px 0.5px 2px var(--shadow-dark), -0.5px -0.5px 2px var(--text-color2);
    --box-shadow-inset-box: -10px -10px 30px rgba(255, 255, 255, 0.9), 10px 10px 30px rgba(157, 161, 167, 0.4), inset -10px -10px 30px rgba(157, 161, 167, 0.25), inset 10px 10px 30px rgba(255, 255, 255, 0.9);
