--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -1,4 +1,7 @@
 /* Common Components Styles */
+h3{
+  color: var(--text-color3);
+}
 
 .btn {
   display: flex;
@@ -78,82 +81,56 @@
   box-shadow: var(--box-shadow-press);
 }
 
-
-/* Toggle Switch */
-.buttons__switch {
-  position: relative;
-  width: 60px;
-  height: 30px;
-  display: inline-block;
-}
-
-.buttons__switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.switch__slider {
-  cursor: pointer;
-  box-shadow: var(--box-shadow-up);
-  border-radius: 50px;
-  width: 100%;
-  height: 100%;
-  transition: background-color 0.3s;
-}
-
-.switch__slider-face {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 0.2rem;
-  position: absolute;
-  left: 4.5px;
-  top: 4.5px;
-  width: 25px;
-  height: 20px;
-  background-color: white-shadow;
-  box-shadow: var(--box-shadow-press);
-  border-radius: 50px;
-  transition: 0.3s;
-}
-
-.switch__slider-eyeRight,
-.switch__slider-eyeLeft {
-  width: 5px;
-  height: 5px;
-  background-color: var(--accent-color2);
-  border-radius: 50%;
-  transition: background-color 0.3s;
-}
-
-.switch__slider-eyeLeft {
-  margin-right: 3px;
-}
-
-input:checked+.switch__slider {
-  background-color: var(--highlight-color2);
-}
-
-input:checked+.switch__slider-face {
-  transform: translateX(25px);
-}
-
-input:checked+.switch__slider-eyeRight,
-input:checked+.switch__slider-eyeLeft {
-  background-color: transparent;
-  border: solid 0.05rem var(--text-color);
-  border-top: transparent;
-}
-
 /* Language Button */
 .buttons__language {
+  position: relative;
+  top: -43.5rem;
+  left: 5.5rem;
   background: var(--primary-bg);
   border: none;
-  border-radius: 0.3rem;
+  border-radius: 50%;
   font-weight: 600;
   font-size: 0.7rem;
   padding: 8px 10px;
   box-shadow: var(--box-shadow-press);
+}
+
+
+.wrapper {
+  position: relative;
+  top: -20rem;
+  left: -7rem;
+  width: 300px;
+  height: 300px;
+}
+
+
+/* —–––––––––– Botón —–––––––––– */
+.dot {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background: radial-gradient(circle at 60% 40%, #cfcaea, #696e7e);
+  box-shadow:
+    0 0 10px rgba(80, 159, 255, 0.4),
+    0 0 25px rgba(90, 184, 255, 0.3);
+
+  offset-path: path("M 56 130 Q 65 185 105 202");
+  offset-rotate: 0deg;
+
+  animation: move 3s infinite ease-in-out alternate;
+}
+
+@keyframes move {
+  from {
+    offset-distance: 0%;
+  }
+
+  to {
+    offset-distance: 100%;
+  }
 }
