--- a/Portafolio Udemi/assets/css/styles.css
+++ b/Portafolio Udemi/assets/css/styles.css
@@ -47,7 +47,7 @@ h1 {
   width: 85%;
   height: 85vh;
   min-height: 85vh;
-  margin: 5vh auto;
+  margin: 12vh auto;
   border-radius: 20px;
   display: grid;
   grid-template-areas: "aside content";
@@ -76,7 +76,7 @@ h1 {
 }
 
 .user-info__general {
-  margin-top: 2rem;
+  margin-top: 3rem;
   text-align: center;
 }
 
@@ -84,16 +84,16 @@ h1 {
   position: relative;
   display: inline-block;
   width: 12rem;
-  margin-top: 1rem;
-  border: 1px solid var(--text-color2);
+  margin-top: 3rem;
   border-radius: 20rem;
+  border: 2px solid var(--primary-bg);
+  box-shadow: var(--box-shadow-main);
   overflow: hidden;
-  box-shadow: var(--box-shadow-up);
 }
 
 .user-info__image {
   width: 100%;
-  box-shadow: var(--box-shadow-inset);
+  box-shadow: var(--box-shadow-press);
 }
 
 .user-info__links {
@@ -124,7 +124,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 8rem;
+  gap: 12rem;
 }
 
 .menu__option {
@@ -137,7 +137,7 @@ h1 {
   flex-direction: center;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
+  gap: 14rem;
 }
 
 .layout__content {
@@ -171,7 +171,7 @@ h1 {
 }
 
 .page__title {
-  color: var(--text-color);
+  color: var(--accent-color2);
   opacity: 0.7;
 }
 
@@ -180,8 +180,16 @@ h1 {
 }
 
 .page__title span {
-  color: var(--accent-color2);
-  font-family: "Nunito", serif;
+  font-size: 40px;
+  font-weight: 600;
+  color: var(--text-color2);
+  text-shadow:
+    2px 2px 5px var(--shadow-light), -2px -2px 5px var(--text-color2), 0.5px 0.5px 2px var(--shadow-dark), -0.5px -0.5px 2px var(--text-color2);
+  position: relative;
+}
+
+.page__title span::before {
+  content: attr(text);
 }
 
 .page__btn {
