--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -82,23 +82,98 @@ h3 {
 }
 
 /* Language Button */
-.buttons__language {
+.toggle-container {
   position: relative;
-  top: 1.5rem;
-  left: 12.5rem;
-  background: var(--primary-bg);
-  border: none;
-  border-radius: 50%;
+  aspect-ratio: 292 / 142;
+  top: 4rem;
+  left: 17rem;
+  transform: rotate(-45deg);
+  height: 1.875em;
+}
+
+.toggle-input {
+  appearance: none;
+  margin: 0;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.toggle {
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+}
+
+.toggle-text{
+  font-size: 5rem;
   font-weight: 600;
-  font-size: 0.7rem;
-  padding: 8px 10px;
-  box-shadow: var(--box-shadow-press);
+  fill: var(--text-color2);
+  transform: rotate(45deg);
+
+}
+
+.toggle-background {
+  fill: var(--accent-color2);
+  transition: fill .4s;
+}
+
+.toggle-input:checked+.toggle .toggle-background {
+  fill: var(--accent-color2);
+}
+
+.toggle-circle-center {
+  transform-origin: center;
+  transition: transform .6s;
+}
+
+.toggle-input:checked+.toggle .toggle-circle-center {
+  transform: translateX(150px);
+}
+
+.toggle-circle {
+  transform-origin: center;
+  transition: transform .45s;
+  backface-visibility: hidden;
+}
+
+.toggle-circle.left {
+  transform: scale(1);
+}
+
+.toggle-input:checked+.toggle .toggle-circle.left {
+  transform: scale(0);
+}
+
+.toggle-circle.right {
+  transform: scale(0);
+}
+
+.toggle-input:checked+.toggle .toggle-circle.right {
+  transform: scale(1);
+}
+
+.toggle-icon {
+  transition: fill .4s;
+}
+
+.toggle-icon.on {
+  fill: var(--accent-color2);
+}
+
+
+.toggle-input:checked+.toggle .toggle-icon.off {
+  fill: var(--accent-color2);
 }
 
 
 .wrapper {
   position: absolute;
-  top: 29rem;
+  top: 59rem;
   left: -7rem;
   width: 300px;
   height: 300px;
