feat(projects): update project section layout and fix icon rendering

--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -25,6 +25,7 @@ h3 {
   color: #516d91;
   background-color: #E5EDF5;
   box-shadow: -2px -1px 8px 0px #ffffff, 2px 1px 8px 0px rgb(95 157 231 / 48%);
+  cursor: pointer;
 }
 
 .btn:active {
