--- a/Portafolio Udemi/assets/css/commonComponents.css
+++ b/Portafolio Udemi/assets/css/commonComponents.css
@@ -171,53 +171,43 @@ h3 {
   fill: var(--accent-color2);
 }
 
-
-.aside__theme {
+.wrapper {
   position: absolute;
+  top: 59rem;
+  left: -7rem;
   width: 300px;
   height: 300px;
-  cursor: pointer;
-  /* Opcional: cambia color de fondo según tema */
-  border-radius: 20px;
-  transition: background-color 0.5s ease;
 }
 
-/* Ocultar el checkbox */
-.switch__input {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  margin: 0;
-  cursor: pointer;
-}
-
-/* Dot que sigue el path */
-.slider__dot {
-  width: 20px;
-  height: 20px;
+.dot {
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
-  background: #fff000;
   position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
 
-  /* Movimiento por path */
   offset-path: path("M 56 130 Q 65 185 105 202");
-  offset-distance: 0%;
   offset-rotate: 0deg;
-  transition: offset-distance 0.6s ease, transform 0.3s ease;
+  offset-distance: 0%;
+
+  transition: offset-distance 0.8s ease-in-out,
+    background-color 0.4s ease;
 }
 
-/* Cuando se activa el switch, el dot se mueve al final del path */
-.switch__input:checked~.slider__dot {
+
+.dot.is-active {
   offset-distance: 100%;
+  background-color: var(--accent-color2);
 }
 
-/* Hover opcional: levanta ligeramente el dot */
-.aside__theme:hover .slider__dot {
-  transform: translateY(-3px);
+.wrapper .track {
+  stroke: url(#degradadoNormal);
+  filter: url(#shadowNormal);
 }
 
-/* Hover opcional: cambia el fondo */
-.aside__theme:hover {
-  background-color: #522ba7;
+.wrapper.is-active .track {
+  stroke: url(#degradadoActivo);
+  filter: url(#shadowActivo);
 }
